--- a/estiloindex.css
+++ b/estiloindex.css
@@ -6,6 +6,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+.blanq{
+  height: 156px;
+}
 body{
     background: #efefef;
 }
@@ -18,6 +21,7 @@ header {
     box-sizing: border-box;
     color: rgb(18,47,96);
     font-family: 'Josefin Sans', sans-serif;
+    z-index: 1;
 }
 /*Cosas Header*/
 .header-icon {
@@ -34,7 +38,7 @@ header {
 .header-titulo {
     position: absolute;
     left: 140px;
-    top: 0;
+    top: 10px;
     bottom: 0;
     margin: auto;
     font-size: 70px;
@@ -159,7 +163,10 @@ header {
 .navegador{
     font-family: sans-serif ;
     height: 156px;
+    width: 1500px;
     background-color: #333;
+    position: fixed;
+    z-index: 0;
 }
 ul {
     list-style-type: none;
@@ -197,6 +204,7 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 20px;
 }
 .cartaprincipal{
     background-color: rgb(18,47,96);
@@ -236,15 +244,107 @@ ul {
 }
 /*fin cartas*/
 
+/*carusel*/
+main#carousel {
+    grid-row: 1 / 2;
+    grid-column: 1 / 8;
+    width: 100vw;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    transform-style: preserve-3d;
+    perspective: 600px;
+    --items: 5;
+    --middle: 3;
+    --position: 1;
+    pointer-events: none;
+  }
+  
+  div.item {
+    position: absolute;
+    width: 300px;
+    height: 400px;
+    background-color: coral;
+    --r: calc(var(--position) - var(--offset));
+    --abs: max(calc(var(--r) * -1), var(--r));
+    transition: all 0.25s linear;
+    transform: rotateY(calc(-10deg * var(--r)))
+      translateX(calc(-300px * var(--r)));
+    z-index: calc((var(--position) - var(--abs)));
+  }
+  
+  div.item:nth-of-type(1) {
+    --offset: 1;
+    background-color: rgb(1, 20, 102);
+  }
+  div.item:nth-of-type(2) {
+    --offset: 2;
+    background-color: rgb(6, 18, 128);
+  }
+  div.item:nth-of-type(3) {
+    --offset: 3;
+    background-color: #2f50bd;
+  }
+  div.item:nth-of-type(4) {
+    --offset: 4;
+    background-color: rgb(72, 122, 216);
+  }
+  div.item:nth-of-type(5) {
+    --offset: 5;
+    background-color: #70b3ff;
+  }
+  
+  input:nth-of-type(1) {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+  input:nth-of-type(1):checked ~ main#carousel {
+    --position: 1;
+  }
+  
+  input:nth-of-type(2) {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+  }
+  input:nth-of-type(2):checked ~ main#carousel {
+    --position: 2;
+  }
+  
+  input:nth-of-type(3) {
+    grid-column: 4 /5;
+    grid-row: 2 / 3;
+  }
+  input:nth-of-type(3):checked ~ main#carousel {
+    --position: 3;
+  }
+  
+  input:nth-of-type(4) {
+    grid-column: 5 / 6;
+    grid-row: 2 / 3;
+  }
+  input:nth-of-type(4):checked ~ main#carousel {
+    --position: 4;
+  }
+  
+  input:nth-of-type(5) {
+    grid-column: 6 / 7;
+    grid-row: 2 / 3;
+  }
+  input:nth-of-type(5):checked ~ main#carousel {
+    --position: 5;
+  }
+
 /*footer*/
 footer{
-    background-color: rgb(18,47,96);
-    height: 50px;
-    text-align: center;
-    vertical-align: center;
-    line-height: 50px;
+  margin: 0;
+  height: 70px;
+  background-color: rgb(18,47,96);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
 }
-.textofooter{
-    display: flex;
-    text-align: center;
-}
+/*fin footer*/
