--- a/estilodescuentos.css
+++ b/estilodescuentos.css
@@ -1,248 +1,216 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Poppins&display=swap');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilodescuentos.css">
+    <title>Soflu - Descuentos</title>
+</head>
+<body>
+    <header>
+        <img class="header-icon" src="logo.png">
+        <h1 class="header-titulo">SOFLU</h1>
+        <h2 class="header-desc">Ferreterías profesionales</h2>
+        <div class="header-menu">
+            <div class="boton-popup">
+                <label for="btn-popup">
+                    Iniciar Sesión
+                </label>
+            </div>
+            <div class="boton-popup2">
+                <label for="btn-popup">
+                    Registrate porfi
+                </label>
+            </div>
+        
+            <input type="checkbox" id="btn-popup">
+            <div class="container-popup">
+                <div class="content-popup">
+                    <h2>Ingrese sus datos:</h2>
+                    <form>
+                        <input type="text" placeholder="Nombre de usuario">
+                        <input type="password" placeholder="Contraseña">
+                    </form>
+                        <div class="btn-cerrar">
+                        <label for="btn-popup">Aceptar</label>
+                        <label for="btn-popup">Cerrar</label>
+                    </div>
+                </div>
+                <label for="btn-popup" class="cerrar-popup"></label>
+            </div>
+        </div>
+    </header>
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background: #efefef;
-}
-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-image: url(fondoheader.png);
-    padding: 55px;
-    box-sizing: border-box;
-    color: rgb(18,47,96);
-    font-family: 'Josefin Sans', sans-serif;
-}
-/*Cosas Header*/
-.header-icon {
-    position: absolute;
-    left: 20px;
-    top: 0;
-    bottom: 0;
-    width: 100px;
-    height: auto;
-    display: block;
-    margin: auto;
-}
+    <nav>
+        <div class="navegador">
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a class="active" href="descuentos.html">Descuentos</a></li>
+            <li><a href="pasteleria.html">Pastelería</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+          </ul>
+        </div>
+    </nav>
 
-.header-titulo {
-    position: absolute;
-    left: 140px;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    font-size: 70px;
-}
+    <main>
+        <div class="blanq"></div>
+        <section>
+            <div class="container">
+                <div class="fila1">
+                    <div class="carta1">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
 
-.header-desc {
-    position: absolute;
-    left: 140px;
-    top: 70px;
-    bottom: 0;
-    margin: auto;
-}
+                    <div class="carta2">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
 
-.header-menu {
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-/*fin cosas Header*/
+                    <div class="carta3">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="fila2">
+                    <div class="carta4">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
 
-/*Boton Iniciar sesion*/
-.boton-popup{
-    padding: 18px;
-}
-.boton-popup label{
-    padding: 7px 31px;
-    background-color: rgb(18,47,96);
-    color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 300ms ease;
-}
-.boton-popup label:hover{
-    background-color: rgb(7, 31, 73);
-}
-.boton-popup2{
-    padding: 18px;
-}
-.boton-popup2 label{
-    padding: 7px 25px;
-    background-color: rgb(74, 179, 235);
-    color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 300ms ease;
-}
-.boton-popup2 label:hover{
-    background-color: rgb(8, 143, 216);
-}
-/*fin Boton Iniciar sesion*/
+                    <div class="carta5">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
 
-/*Ventana popup*/
-#btn-popup{
-    display: none;
-}
-.container-popup{
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0; left: 0;
-    background-color: rgba(144, 148, 150, 0.8);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 100;
-}
-#btn-popup:checked ~ .container-popup{
-    display: flex;
-}
-.content-popup{
-    width: 100%;
-    max-width: 400px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 4px;
-}
-.content-popup h2{
-    margin-bottom: 15px;
-}
-.content-popup p{
-    padding: 15px 0px;
-    border-top: 1px solid #dbdbdb;
-    border-bottom: 1px solid #dbdbdb;
-}
-.content-popup .btn-cerrar{
-    width: 100%;
-    margin-top: 15px;
-    display: flex;
-    justify-content: flex-end;
-}
-.content-popup .btn-cerrar label{
-    padding: 7px 10px;
-    background-color: rgb(45, 126, 170);
-    color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 300ms ease;
-}
-.content-popup .btn-cerrar label:hover{
-    background-color:rgb(18,47,96);
-}
-.cerrar-popup{
-    width:100%;
-    height: 100vh;
-    position: absolute;
-    top:0; left: 0;
-    z-index: -1;
-}
-@media screen and (max-width:800px) {
-    .content-popup{
-        width: 90%;
-    }
-}
-/* fin Ventana popup*/
+                    <div class="carta6">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="fila3">
+                    <div class="carta7">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
 
-/* barra nav*/
-.navegador{
-    font-family: sans-serif ;
-    height: 156px;
-    background-color: #333;
-}
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 110px;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
-  
-  li a:hover:not(.active) {
-    background-color: #111;
-  }
-  
-  .active {
-    background-color: rgb(9, 68, 170);
-  }
-/*fin barra nav*/
+                    <div class="carta8">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
 
-/*cartas*/
-.contenedorcartasprincipal{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.cartaprincipal{
-    background-color: rgb(18,47,96);
-    height: 270px ;
-    width: 270px;
-    margin-right: 20px;
-    margin-top: 30px;
-    display: inline-block;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    text-align: center;
-    vertical-align: center;
-    line-height: 270px;
-}
-.cartaprincipal:hover{
-    transform:scale(1.1);
-    box-shadow: 0 0 10px rgb(3, 17, 43);
-}
-.cartaprincipalpasteleria{
-    background-color: rgb(18,47,96);
-    height: 270px ;
-    width: 270px;
-    margin-right: 20px;
-    margin-top: 30px;
-    display: inline-block;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    vertical-align: center;
-    line-height: 270px;
-}
-.cartaprincipalpasteleria:hover{
-    transform:scale(1.1);
-    box-shadow: 0 0 10px rgb(58, 6, 36);
-    background-color: rgb(223, 17, 137);
-}
-/*fin cartas*/
-
-/*footer*/
-footer{
-    background-color: rgb(18,47,96);
-    height: 50px;
-    text-align: center;
-    vertical-align: center;
-    line-height: 50px;
-}
-.textofooter{
-    display: flex;
-    text-align: center;
-}
+                    <div class="carta9">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+    <aside>
+        <div class="publicidad">  
+            <a href=""><img src="" alt="">
+            <h4></h4></a>
+        </div>
+        <div class="publicidad">  
+            <a href=""><img src="" alt="">
+            <h4></h4></a>
+        </div>
+        <div class="publicidad">  
+            <a href=""><img src="" alt="">
+            <h4></h4></a>
+        </div>
+        <div class="publicidad">  
+            <a href=""><img src="" alt="">
+            <h4></h4></a>
+        </div>
+        <div class="publicidad">  
+            <a href=""><img src="" alt="">
+            <h4></h4></a>
+        </div>
+        <div class="publicidad">  
+            <a href=""><img src="" alt="">
+            <h4></h4></a>
+        </div>
+    </aside>
+    
+    <footer>
+        <h3>casa.ferretera.soflu.ok</h3>
+        <h3>Tel. 1145268587</h3>
+    </footer>
+</body>
+</html>
