--- a/estiloproductos.css
+++ b/estiloproductos.css
@@ -5,6 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+.blanq{
+    height: 156px;
+}
 body{
     background: #efefef;
 }
@@ -34,7 +37,7 @@ header {
 .header-titulo {
     position: absolute;
     left: 140px;
-    top: 0;
+    top: 10px;
     bottom: 0;
     margin: auto;
     font-size: 70px;
@@ -158,7 +161,7 @@ header {
 /* barra nav*/
 .navegador{
     font-family: sans-serif ;
-    height: 157px;
+    height: 156px;
     width: 1500px;
     background-color: #333;
     position: fixed;
@@ -191,53 +194,62 @@ ul {
   }
   
   .active {
-    background-color: rgb(9, 68, 170);
+    background-color: rgb(223, 17, 137);
   }
 /*fin barra nav*/
-.flexprod{
+
+/*cartas*/
+.contenedorcartasprincipal{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.producto{
-    z-index: -1;
-    position: absolute;
+.cartaprincipal{
+    background-color: rgb(18,47,96);
+    height: 270px ;
+    width: 270px;
+    margin-right: 20px;
+    margin-top: 30px;
+    display: inline-block;
     font-family: 'Poppins', sans-serif;
-    background-color: rgb(255, 255, 255);
-    height: 210px;
-    width: 1300px;
-    padding: 10px;
-    display: flex;
+    color: white;
+    text-align: center;
+    vertical-align: center;
+    line-height: 270px;
 }
-.producto:hover{
-    box-shadow: 0 0  10px black;
-    transform:scale(1);
-    z-index: -1;
+.cartaprincipal:hover{
+    transform:scale(1.1);
+    box-shadow: 0 0 10px rgb(3, 17, 43);
 }
-.imagenproducto{
-    height: 190px;
-    width: 190px;
-    margin-right: 5px;
+.cartaprincipalpasteleria{
+    background-color: rgb(18,47,96);
+    height: 270px ;
+    width: 270px;
+    margin-right: 20px;
+    margin-top: 30px;
+    display: inline-block;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    vertical-align: center;
+    line-height: 270px;
 }
-.infoproducto{
-vertical-align: top;
-text-align: left;
+.cartaprincipalpasteleria:hover{
+    transform:scale(1.1);
+    box-shadow: 0 0 10px rgb(58, 6, 36);
+    background-color: rgb(223, 17, 137);
 }
-
-
-/*fin productos*/
+/*fin cartas*/
 
 /*footer*/
 footer{
+    margin: 0;
+    height: 70px;
     background-color: rgb(18,47,96);
-    height: 50px;
-    text-align: center;
-    vertical-align: center;
-    line-height: 50px;
-}
-.textofooter{
     display: flex;
-    text-align: center;
-}
-
-.publicidad{
-    z-index: -2;
-}
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    color: white;
+  }
+  /*fin footer*/
