--- a/estiloproductos.css
+++ b/estiloproductos.css
@@ -194,52 +194,38 @@ ul {
   }
   
   .active {
-    background-color: rgb(223, 17, 137);
+    background-color: rgb(9, 68, 170);
   }
 /*fin barra nav*/
-
-/*cartas*/
-.contenedorcartasprincipal{
+.flexprod{
     display: flex;
-    justify-content: center;
-    align-items: center;
+
 }
-.cartaprincipal{
-    background-color: rgb(18,47,96);
-    height: 270px ;
-    width: 270px;
-    margin-right: 20px;
-    margin-top: 30px;
-    display: inline-block;
+.producto{
+    z-index: -1;
+    position: absolute;
     font-family: 'Poppins', sans-serif;
-    color: white;
-    text-align: center;
-    vertical-align: center;
-    line-height: 270px;
+    background-color: rgb(255, 255, 255);
+    height: 210px;
+    width: 1300px;
+    padding: 10px;
+    display: flex;
 }
-.cartaprincipal:hover{
-    transform:scale(1.1);
-    box-shadow: 0 0 10px rgb(3, 17, 43);
+.producto:hover{
+    box-shadow: 0 0  10px black;
+    transform:scale(1);
+    z-index: -1;
 }
-.cartaprincipalpasteleria{
-    background-color: rgb(18,47,96);
-    height: 270px ;
-    width: 270px;
-    margin-right: 20px;
-    margin-top: 30px;
-    display: inline-block;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    vertical-align: center;
-    line-height: 270px;
+.imagenproducto{
+    height: 190px;
+    width: 190px;
+    margin-right: 5px;
 }
-.cartaprincipalpasteleria:hover{
-    transform:scale(1.1);
-    box-shadow: 0 0 10px rgb(58, 6, 36);
-    background-color: rgb(223, 17, 137);
+.infoproducto{
+vertical-align: top;
+text-align: left;
 }
-/*fin cartas*/
+/*fin productos*/
 
 /*footer*/
 footer{
@@ -253,3 +239,7 @@ footer{
     color: white;
   }
   /*fin footer*/
+
+.publicidad{
+    z-index: -2;
+}
