--- a/estilocontacto.css
+++ b/estilocontacto.css
@@ -5,6 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+.blanq{
+    height: 156px;
+}
 body{
     background: #efefef;
 }
@@ -17,6 +20,7 @@ header {
     box-sizing: border-box;
     color: rgb(18,47,96);
     font-family: 'Josefin Sans', sans-serif;
+    z-index: 1;
 }
 /*Cosas Header*/
 .header-icon {
@@ -33,7 +37,7 @@ header {
 .header-titulo {
     position: absolute;
     left: 140px;
-    top: 0;
+    top: 10px;
     bottom: 0;
     margin: auto;
     font-size: 70px;
@@ -158,7 +162,10 @@ header {
 .navegador{
     font-family: sans-serif ;
     height: 156px;
+    width: 1500px;
     background-color: #333;
+    position: fixed;
+    z-index: 0;
 }
 ul {
     list-style-type: none;
@@ -234,15 +241,3 @@ ul {
 }
 /*fin cartas*/
 
-/*footer*/
-footer{
-    background-color: rgb(18,47,96);
-    height: 50px;
-    text-align: center;
-    vertical-align: center;
-    line-height: 50px;
-}
-.textofooter{
-    display: flex;
-    text-align: center;
-}
