--- a/estiloindex.css
+++ b/estiloindex.css
@@ -205,6 +205,8 @@ ul {
     justify-content: center;
     align-items: center;
     margin: 20px;
+    margin-bottom: 200px;
+    margin-top: 150px;
 }
 .cartaprincipal{
     background-color: rgb(18,47,96);
@@ -264,7 +266,7 @@ main#carousel {
   
   div.item {
     position: absolute;
-    width: 300px;
+    width: 700px;
     height: 400px;
     background-color: coral;
     --r: calc(var(--position) - var(--offset));
@@ -277,23 +279,23 @@ main#carousel {
   
   div.item:nth-of-type(1) {
     --offset: 1;
-    background-color: rgb(1, 20, 102);
+    background-image: url(frase1.jpg);
   }
   div.item:nth-of-type(2) {
     --offset: 2;
-    background-color: rgb(6, 18, 128);
+    background-image: url(frase2.jpg);
   }
   div.item:nth-of-type(3) {
     --offset: 3;
-    background-color: #2f50bd;
+    background-image: url(frase3.jpg);
   }
   div.item:nth-of-type(4) {
     --offset: 4;
-    background-color: rgb(72, 122, 216);
+    background-image: url(frase4.jpg);
   }
   div.item:nth-of-type(5) {
     --offset: 5;
-    background-color: #70b3ff;
+    background-image: url(frase5.png);
   }
   
   input:nth-of-type(1) {
