--- a/estilopasteleria.css
+++ b/estilopasteleria.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Poppins&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -15,7 +15,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    background-image: url(fondoheader.png);
+    background-color: rgb(219, 210, 210);
     padding: 55px;
     box-sizing: border-box;
     color: rgb(18,47,96);
@@ -41,6 +41,8 @@ header {
     bottom: 0;
     margin: auto;
     font-size: 70px;
+    font-family: 'Dancing Script', cursive;
+    color: rgb(238, 117, 187);
 }
 
 .header-desc {
@@ -69,28 +71,28 @@ header {
 }
 .boton-popup label{
     padding: 7px 31px;
-    background-color: rgb(18,47,96);
+    background-color: rgb(233, 40, 152);
     color: #fff;
     border-radius: 4px;
     cursor: pointer;
     transition: all 300ms ease;
 }
 .boton-popup label:hover{
-    background-color: rgb(7, 31, 73);
+    background-color: rgb(160, 0, 93);
 }
 .boton-popup2{
     padding: 18px;
 }
 .boton-popup2 label{
     padding: 7px 25px;
-    background-color: rgb(74, 179, 235);
+    background-color: rgb(238, 117, 187);
     color: #fff;
     border-radius: 4px;
     cursor: pointer;
     transition: all 300ms ease;
 }
 .boton-popup2 label:hover{
-    background-color: rgb(8, 143, 216);
+    background-color: rgb(223, 17, 137);
 }
 /*fin Boton Iniciar sesion*/
 
@@ -135,7 +137,7 @@ header {
 }
 .content-popup .btn-cerrar label{
     padding: 7px 10px;
-    background-color: rgb(45, 126, 170);
+    background-color: rgb(238, 117, 187);
     color: #fff;
     border-radius: 4px;
     cursor: pointer;
@@ -198,54 +200,13 @@ ul {
   }
 /*fin barra nav*/
 
-/*cartas*/
-.contenedorcartasprincipal{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.cartaprincipal{
-    background-color: rgb(18,47,96);
-    height: 270px ;
-    width: 270px;
-    margin-right: 20px;
-    margin-top: 30px;
-    display: inline-block;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    text-align: center;
-    vertical-align: center;
-    line-height: 270px;
-}
-.cartaprincipal:hover{
-    transform:scale(1.1);
-    box-shadow: 0 0 10px rgb(3, 17, 43);
-}
-.cartaprincipalpasteleria{
-    background-color: rgb(18,47,96);
-    height: 270px ;
-    width: 270px;
-    margin-right: 20px;
-    margin-top: 30px;
-    display: inline-block;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    vertical-align: center;
-    line-height: 270px;
-}
-.cartaprincipalpasteleria:hover{
-    transform:scale(1.1);
-    box-shadow: 0 0 10px rgb(58, 6, 36);
-    background-color: rgb(223, 17, 137);
-}
-/*fin cartas*/
+
 
 /*footer*/
 footer{
     margin: 0;
     height: 70px;
-    background-color: rgb(18,47,96);
+    background-color: rgb(238, 117, 187);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -253,3 +214,55 @@ footer{
     color: white;
   }
   /*fin footer*/
+/*cartas*/
+  .card {
+    width: 350px;
+    height: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
+    margin: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.card-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+.card-title{
+    font-size: 35px;
+}
+
+.card-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    display: none;
+   }
+   
+   .card:hover .card-info {
+    display: block;
+   }
+
+.linea1{
+    display: flex;
+}
+.linea2{
+    display: flex;
+}
+.linea3{
+    display: flex;
+}
+
+.card:hover{
+    height: 600px;
+    
+}
+/*fin cartas*/
