--- a/estilodescuentos.css
+++ b/estilodescuentos.css
@@ -20,7 +20,7 @@ header {
     box-sizing: border-box;
     color: rgb(18,47,96);
     font-family: 'Josefin Sans', sans-serif;
-    z-index: 1;
+    z-index: 3;
 }
 /*Cosas Header*/
 .header-icon {
@@ -162,10 +162,10 @@ header {
 .navegador{
     font-family: sans-serif ;
     height: 156px;
-    width: 1500px;
+    width: 20000px;
     background-color: #333;
     position: fixed;
-    z-index: 0;
+    z-index: 2;
 }
 ul {
     list-style-type: none;
@@ -208,14 +208,27 @@ footer{
     align-items: center;
     justify-content: space-evenly;
     color: white;
+    font-family: 'Poppins', sans-serif;
+    z-index: 99;
   }
+  
   .ilogo{
     height: 40px;
   }
-  .inst{
+  .instagram{
+    height: 40px;
     display: flex;
   }
+  .textoig{
+    margin-top: 6px;
+    margin-left: 3px;
+    font-size: medium;
+  }
+  .textotel{
+    font-size: medium;
+  }
   /*fin footer*/
+
 
   section{
     margin-top:20px;
@@ -238,7 +251,7 @@ footer{
     text-align: center;
     background-color: white;
     width:300px;
-    height: 400px;
+    height: 420px;
     margin:30px auto ;
     padding:15px;
     
@@ -263,15 +276,16 @@ h3{
 }
 .card-title{
     font-size: larger;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: blue;
 }
 .precio{
     font-size: larger;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: rgb(25, 25, 143);
 }
 .card-text{
     font-size: medium;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
+
