--- a/estilopasteleria.css
+++ b/estilopasteleria.css
@@ -15,12 +15,12 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgb(219, 210, 210);
+    background-image: url(fondopasteleria.jpeg);
     padding: 55px;
     box-sizing: border-box;
     color: rgb(18,47,96);
     font-family: 'Josefin Sans', sans-serif;
-    z-index: 1;
+    z-index: 3;
 }
 /*Cosas Header*/
 .header-icon {
@@ -164,10 +164,10 @@ header {
 .navegador{
     font-family: sans-serif ;
     height: 156px;
-    width: 1500px;
+    width: 2000px;
     background-color: #333;
     position: fixed;
-    z-index: 0;
+    z-index: 2;
 }
 ul {
     list-style-type: none;
@@ -212,25 +212,38 @@ footer{
     align-items: center;
     justify-content: space-evenly;
     color: white;
+    font-family: 'Poppins', sans-serif;
+    z-index: 99;
   }
+
   .ilogo{
     height: 40px;
   }
-  .inst{
+.instagram{
+    height: 40px;
     display: flex;
+  }
+  .textoig{
+    margin-top: 6px;
+    margin-left: 3px;
   }
   /*fin footer*/
 /*cartas*/
+main {
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
   .card {
     width: 350px;
-    height: 300px;
+    height: 200px;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     position: relative;
     margin: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
+    
 }
 
 .card-image {
@@ -251,6 +264,7 @@ footer{
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     display: none;
+    padding: 20px;
    }
    
    .card:hover .card-info {
@@ -266,9 +280,28 @@ footer{
 .linea3{
     display: flex;
 }
-
 .card:hover{
     height: 600px;
-    
+    width: 500px;
 }
+    
 /*fin cartas*/
+/*publicidad*/
+.publicidades{
+    display: block;
+    position: absolute;
+    width: 580px;
+    height: 720px;
+    top: 140px;
+    right: 0px;
+    border:1px solid #eee;
+    z-index: 0;
+}
+.imagenpubli{
+    height: 230px;
+    width: 430px;
+    margin-left: 40px;
+    margin-right: 20px;
+    margin-top: 28px;
+}
+ /*fin publicidad*/
