--- a/estiloproductos.css
+++ b/estiloproductos.css
@@ -20,7 +20,7 @@ header {
     box-sizing: border-box;
     color: rgb(18,47,96);
     font-family: 'Josefin Sans', sans-serif;
-    z-index: 1;
+    z-index: 3;
 }
 /*Cosas Header*/
 .header-icon {
@@ -162,10 +162,10 @@ header {
 .navegador{
     font-family: sans-serif ;
     height: 156px;
-    width: 1500px;
+    width: 2000px;
     background-color: #333;
     position: fixed;
-    z-index: 0;
+    z-index: 2;
 }
 ul {
     list-style-type: none;
@@ -197,19 +197,16 @@ ul {
     background-color: rgb(9, 68, 170);
   }
 /*fin barra nav*/
-.flexprod{
-    display: flex;
 
-}
 .producto{
-    z-index: -1;
-    position: absolute;
     font-family: 'Poppins', sans-serif;
     background-color: rgb(255, 255, 255);
     height: 210px;
-    width: 1300px;
+    width: 1290px;
     padding: 10px;
     display: flex;
+    margin: 10px;
+    margin-left: 30px;
 }
 .producto:hover{
     box-shadow: 0 0  10px black;
@@ -225,27 +222,57 @@ ul {
 vertical-align: top;
 text-align: left;
 }
+.envio{
+    background-color: rgb(45, 126, 170);
+    position: absolute;
+    padding: 5px;
+}
 /*fin productos*/
 
 /*footer*/
 footer{
-    margin: 0;
-    height: 70px;
-    background-color: rgb(18,47,96);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    color: white;
-  }
-  .ilogo{
-    height: 40px;
-  }
-  .inst{
-    display: flex;
-  }
+        margin: 0;
+        height: 70px;
+        background-color: rgb(18,47,96);
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        color: white;
+        font-family: 'Poppins', sans-serif;
+        z-index: 99;
+      }
+    
+      .ilogo{
+        height: 40px;
+      }
+    .instagram{
+        height: 40px;
+        display: flex;
+      }
+      .textoig{
+        margin-top: 6px;
+        margin-left: 3px;
+      }
+
   /*fin footer*/
 
-.publicidad{
-    z-index: -2;
+   /*publicidad*/
+   .publicidades{
+    display: block;
+    position: absolute;
+    width: 580px;
+    height: 720px;
+    top: 140px;
+    right: 0px;
+    border:1px solid #eee;
+    z-index: 0;
 }
+.imagenpubli{
+    height: 280px;
+    width: 480px;
+    margin-left: 40px;
+    margin-right: 20px;
+    margin-top: 28px;
+}
+ /*fin publicidad*/
